test/sema/typeck/class/internal-ctor.out
error: constructor of class `std::collections::Array` is not accessible.
--> internal-ctor.dora:2:5
 | fn f(): Array[Int32] {
 |     Array[Int32]()
       ~~~~~~~~~~~~~~
 | }
 | 
1 error found.
