test/sema/typeck/class/internal-ctor.dora
fn f(): Array[Int32] {
    Array[Int32]()
}
